--- a/using-app-router/app/globals.css
+++ b/using-app-router/app/globals.css
@@ -1,6 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&family=Montserrat:wght@400;700&display=swap');
 @import 'tailwindcss';
 
+@keyframes loading {
+  0% {
+    color: #e9e9e9;
+  }
+  50% {
+    color: #b89b84;
+  }
+  100% {
+    color: #e9e9e9;
+  }
+}
+
 * {
   box-sizing: border-box;
 }
